directories refactor